--- a/queries.css
+++ b/queries.css
@@ -108,7 +108,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 4.8rem;
-    z-index: 10;
+    z-index: 10000;
     transition: all 0.5s ease-in;
 
     transform: translateX(100%);
